changed minor things

--- a/about.html
+++ b/about.html
@@ -14,11 +14,14 @@
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
             </div>
+
+            <div class="nav-line"></div>
+
             <nav id="nav-buttons">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./about.html" class="current-page-nav">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -30,8 +33,8 @@
                 <h1>About</h1>
                 <p><span>Get to Know Me</span></p>
                 <div class="socials">
-                    <a href="#"><img src="./icons/github-logo.svg" alt="GitHub"></a>
-                    <a href="#"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
+                    <a href="https://github.com/alexhreg"><img src="./icons/github-logo.svg" alt="GitHub"></a>
+                    <a href="www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
                     <a href="./HregdovicAlexResume.pdf" download="AlexHregdovicResume"><img src="./icons/download-simple.svg">Resume</a>
                     <button onClick="CopyText()"><img src="./icons/copy.svg" >alex.hregdovic@outlook.com</button>
                 </div>
@@ -47,7 +50,6 @@
         <main>
             <img src="./images/wave-border.svg" id="wave-border-top">
             <section class="main-content about-content">
-                <!-- <div id="follow-cursor"></div> -->
                 <div class="bio-top">
                     <div class="intro">
                         <p class="about-intro">Hello, I’m Alex Hregdovic! I’m a senior at Seton Hill University and study Computer Science.</p>
