--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
             </div>
+
+            <div class="nav-line"></div>
+
             <nav id="nav-buttons">
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html" class="current-page-nav" >Home</a></li>
                     <li><a href="./projects.html">Projects</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
-
-        
-
-
 
         <header>
             <div class="header-container">
@@ -35,7 +34,7 @@
                 <p><span>Frontend Developer</span> | <img src="./icons/map-pin.svg">Pittsburgh, PA</p>
                 <div class="socials">
                     <a href="https://github.com/alexhreg"><img src="./icons/github-logo.svg" alt="GitHub"></a>
-                    <a href="#"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
+                    <a href="www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
                     <a href="./HregdovicAlexResume.pdf" download="AlexHregdovicResume"><img src="./icons/download-simple.svg">Resume</a>
                     <button onClick="CopyText()"><img src="./icons/copy.svg" >alex.hregdovic@outlook.com</button>
                 </div>
@@ -54,9 +53,7 @@
                 <!-- <div id="follow-cursor"></div> -->
         
                 <section id="short-description">
-                    <!-- <div class="description-line"></div> -->
                     <p><b>Senior Computer Science student who appreciates simplicity and attention to detail</b></p>
-                    <!-- <div class="description-line"></div> -->
                 </section>
 
                 <section id="main-technologies">
