--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,15 @@
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
             </div>
+
+            <div class="nav-line"></div>
+
             <nav id="nav-buttons">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./projects.html">Projects</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./contact.html" class="current-page-nav">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,8 +33,8 @@
                 <h1>Contact</h1>
                 <p><span>Just an Email Away</span></p>
                 <div class="socials">
-                    <a href="#"><img src="./icons/github-logo.svg" alt="GitHub"></a>
-                    <a href="#"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
+                    <a href="https://github.com/alexhreg"><img src="./icons/github-logo.svg" alt="GitHub"></a>
+                    <a href="www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
                     <a href="./HregdovicAlexResume.pdf" download="AlexHregdovicResume"><img src="./icons/download-simple.svg">Resume</a>
                     <button onClick="CopyText()"><img src="./icons/copy.svg" >alex.hregdovic@outlook.com</button>
                 </div>
@@ -47,7 +50,6 @@
         <main>
             <img src="./images/wave-border.svg" id="wave-border-top">
             <div class="main-content contact-content">
-                <!-- <div id="follow-cursor"></div> -->
                 <div class="email-subject">
                     <input type="email" placeholder="Email" required id="email-input">
                     <input type="text" placeholder="Subject" required id="subject-input">
