--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,13 @@
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
             </div>
+
+            <div class="nav-line"></div>
+
             <nav id="nav-buttons">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./projects.html" class="current-page-nav">Projects</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -33,8 +36,8 @@
                 <h1>Projects</h1>
                 <p><span>Coded with Love</span></p>
                 <div class="socials">
-                    <a href="#"><img src="./icons/github-logo.svg" alt="GitHub"></a>
-                    <a href="#"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
+                    <a href="https://github.com/alexhreg"><img src="./icons/github-logo.svg" alt="GitHub"></a>
+                    <a href="www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
                     <a href="./HregdovicAlexResume.pdf" download="AlexHregdovicResume"><img src="./icons/download-simple.svg">Resume</a>
                     <button onClick="CopyText()"><img src="./icons/copy.svg" >alex.hregdovic@outlook.com</button>
                 </div>
@@ -50,7 +53,6 @@
         <main>
             <img src="./images/wave-border.svg" id="wave-border-top">
             <section class="main-content">
-                <!-- <div id="follow-cursor"></div> -->
                 <div class="projects">
                     
                     <div class="project kya">
