fixed minor stuff

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="nav-container-mobile">
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
+                <img src="./icons/x-nav.svg" id="close-button">
             </div>
 
             <div class="nav-line"></div>
@@ -50,8 +51,6 @@
         <main>
             <img src="./images/wave-border.svg" id="wave-border-top">
             <div class="main-content">
-                <!-- <div id="follow-cursor"></div> -->
-        
                 <section id="short-description">
                     <p><b>Senior Computer Science student who appreciates simplicity and attention to detail</b></p>
                 </section>
