fixed issue that shouldnt have existed

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <div id="nav-container-mobile">
             <div class="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
+                <img src="./icons/x-nav.svg" id="close-button">
             </div>
 
             <div class="nav-line"></div>
