fixed line spacing

--- a/about.html
+++ b/about.html
@@ -59,17 +59,19 @@
                 </div>
 
 
-
-                <p>
-                    I’m a massive nerd and love Star Wars, 
-                    Lord of the Rings, reading, video games, and computers.
-                    In my free time, I play video games, read, and spend time
-                    with my family.
-                </p>
-                <p class="about-end">
-                    I enjoy front end development and creating UI’s that are
-                    interesting to experience. 
-                </p>
+                <div class="about-end">
+                    <p>
+                        I’m a massive nerd and love Star Wars, 
+                        Lord of the Rings, reading, video games, and computers.
+                        In my free time, I play video games, read, and spend time
+                        with my family.
+                    </p>
+                    <p>
+                        I enjoy front end development and creating UI’s that are
+                        interesting to experience. 
+                    </p>
+                </div>
+                
 
                 
             </section>
