--- a/about.html
+++ b/about.html
@@ -10,19 +10,19 @@
 <body>
     <div class="container">
 
-        <div id="nav-container-mobile">
-            <div class="nav-toggles">
+        <div id="mobile-nav-container">
+            <div id="nav-toggles">
                 <img src="./icons/nav-hamburger.svg" id="open-button">
                 <img src="./icons/x-nav.svg" id="close-button">
             </div>
-
-            <div class="nav-line"></div>
-
-            <nav id="nav-buttons">
+    
+            <div class="nav-line"> </div>
+    
+            <nav id="mobile-nav">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./about.html" class="current-page-nav">About</a></li>
+                    <li id="active-page"><a href="#">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -34,16 +34,18 @@
                 <p><span>Get to Know Me</span></p>
                 <div class="socials">
                     <a href="https://github.com/alexhreg"><img src="./icons/github-logo.svg" alt="GitHub"></a>
-                    <a href="www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
+                    <a href="https://www.linkedin.com/in/alex-hregdovic-b95b67262"><img src="./icons/linkedin-logo.svg" alt="LinkedIn "></a>
                     <a href="./HregdovicAlexResume.pdf" download="AlexHregdovicResume"><img src="./icons/download-simple.svg">Resume</a>
                     <button onClick="CopyText()"><img src="./icons/copy.svg" >alex.hregdovic@outlook.com</button>
                 </div>
             </div>
-            <nav id="nav-container-desktop">
-                <a href="./index.html">Home</a>
-                <a href="./projects.html">Projects</a>
-                <a href="./about.html">About</a>
-                <a href="./contact.html">Contact</a>
+            <nav id="desktop-nav-container">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
             </nav>
         </header>
 
